<resources>
    <string name="app_name">Lost &amp; Found</string>
    <string name="lost_found_apps"><![CDATA[LOST & FOUND APPS]]></string>
    <string name="welcome_to">Welcome To</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bangla">বাংলা</string>
    <string name="english">English</string>
    <string name="location_request">Keep your location on</string>
    <string name="id_request">Select one of the options below for registration.</string>
    <string name="camera_request">Take your picture by tapping the camera below.</string>
    <string name="address_verification_request">Will you use the National ID card as your current address?</string>
    <string name="foreigner">Foreigner</string>
    <string name="citizen">Bangladeshi</string>
    <string name="log_in">Log In</string>
    <string name="registration">Registration</string>
    <string name="password_forget">Password Forget</string>
    <string name="remember_password">Remember Password</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="user_id">User ID</string>
    <string name="login">Login</string>
    <string name="or_new_user">Or New User?</string>
    <string name="nidnum">National ID Number</string>
    <string name="binnum">Birth registration Number</string>
    <string name="passnum">Passport Number</string>
    <string name="expirydate">Expire Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phnno">Phone Number</string>
    <string name="otp_confirmation"> One Time Password Confirmation</string>
    <string name="otp_confirmation_text">Enter the One Time Password code</string>
    <string name="otp_warning">A 4-digit One Time Password code has been sent to your mobile.</string>
    <string name="help">Help</string>
    <string name="gps_network_not_enabled">Your Location is not enabled. Please Press YES for Location Update</string>
    <string name="open_location_settings">open_location_settings</string>
    <string name="Cancel">Cancel</string>
    <string name="Cancel_item">Cancel (2)</string>
    <string name="allegation">Allegation</string>
    <string name="investigation">Investigation (3)</string>
    <string name="disposal">Disposal (2)</string>
    <string name="logout">Logout</string>
    <string name="email_op">Email (Optional)</string>
    <string name="email">Email</string>
    <string name="field_null_error">This field can not be empty</string>
    <string name="please_choose_one_of_below">Please Choose One of below</string>
    <string-array name="purpose_of_visit">
        <item>@string/select_option</item>
        <item>Purpose of Visit</item>
        <item>Tourist visa</item>
        <item>Business visa</item>
        <item>Student visa</item>
        <item>Employment visa</item>
        <item> Diplomatic/Official visa</item>
        <item>Investor visa</item>
        <item>Journalist visa</item>
        <item> NGO visa</item>
    </string-array>
    <string name="please_fill_up_your_imigartion_address">Fill in the address during your stay in Bangladesh</string>
    <string name="support">Support</string>
    <string name="forget_password">Forget Password?</string>
    <string name="live_chat">Live Chat</string>
    <string name="live_call">Live Call</string>
    <string name="welcome_to_lost_and_found_application">"Welcome to Lost and Found Application                                 Welcome to Lost and Found Application"</string>
    <string name="information_entry">Information Entry</string>
    <string name="theft">Theft</string>
    <string name="to_lose">To lose</string>
    <string name="found">Found</string>
    <string name="information_search">Information Search</string>
    <string name="man">Man</string>
    <string name="vehicle">Vehicle</string>
    <string name="report_status">Report Status</string>
    <string name="others">Others</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="report">Report</string>
    <string-array name="doc_type">
        <item>@string/select_list</item>
        <item>NID</item>
        <item>Birth Certificate </item>
        <item>Passport </item>
    </string-array>
    <string name="doc_type_if_found">Document Type (If Found)</string>
    <string name="entry_code">Your entry is complete save the code below</string>
    <string name="entry_code1">Thanks for the information entry You\'ll be contacted later</string>
    <string name="entry_code2">Bangladesh Police is always deployed with your help</string>
    <string name="entry_code3">Call 01737366028 for any help</string>
    <string name="district">District</string>
    <string name="thana">Thana</string>
    <string name="village">Village</string>
    <string name="name">Name</string>
    <string name="name_if_found">Name (If found)</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="if_found">(If found)</string>
    <string name="husband_wife_name">Husband/Wife Name</string>
    <string name="husband_wife_name_if_found">Husband/Wife Name (If found)</string>
    <string-array name="religion">
        <item>@string/select_option</item>
        <item>Muslim</item>
        <item>Hindu</item>
        <item>Cristian</item>
        <item>Buddhist</item>
        <item>Others</item>

    </string-array>
    <string-array name="gender">
        <item>@string/select_option</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="occupation">Occupation</string>
    <string name="blood_group">Blood Group</string>
    <string name="vehicleType">Vehicle Type</string>
    <string name="vehicleBrand">Brand</string>
    <string name="vehicleModel">Model</string>
    <string name="vehicleRegiPart1">Matro Area</string>
    <string name="vehicleRegiPart2">Level</string>
    <string name="vehicleRegiNo">Regi No</string>
    <string name="engineNo">Engine No</string>
    <string name="chesisNo">Chesis No</string>
    <string name="ccNo">CC</string>
    <string name="madeIn">Made In</string>
    <string name="madeDate">Manufecture Date</string>
    <string name="identityInfo">Identity Information</string>
    <string name="colorName">Color</string>
    <string name="vehicleSign">Identity Sign</string>
    <string name="photo">Photo</string>
    <string name="documentType">Document Type</string>
    <string name="theftplaceAndTimeInfo">Theft Place And Times Information</string>
    <string name="lostplaceAndTimeInfo">Lost Place And Times Information</string>
    <string name="lostplaceAndTimeInfo1">Lost Place And Times Information</string>
    <string name="division">Division</string>
    <string name="addressDetails">Address Details</string>
    <string name="time">Time</string>
    <string name="for_own">For Own</string>
    <string name="for_others">For others</string>
    <string name="fill_the_information_of_the_person">Fill the information of the person</string>
    <string name="number">Number</string>
    <string name="doc_number">Document Number</string>
    <string name="doc_number_if_found">Document Number (If Found)</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="attachment">Attachment</string>
    <string name="blue_book">Blue Book</string>
    <string name="tax_token">Tax Token</string>
    <string name="fitness_certificate">Fitness Certificate</string>
    <string name="image">Image</string>
    <string name="applicant">Applicant</string>
    <string name="notification">Notification</string>
    <string name="insurance_paper">Insurance Paper</string>
    <string name="person_information">Person Information</string>
    <string name="dead_person_information">Dead Person Information</string>
    <string name="person_address">Person Address</string>
    <string name="age">Age</string>
    <string name="approximate_age">Approximate Age</string>
    <string name="image_type">Image Type</string>
    <string name="image_name">Image Name</string>
    <string name="select_list">Select List</string>
    <string name="number_type">Number Type</string>
    <string name="country">Country</string>
    <string name="one_line_address">One Line Address</string>
    <string name="habit">Habit</string>
    <string name="speech">Speech</string>
    <string-array name="address_type">
        <item> @string/select_list </item>
        <item> Obtained from other sources </item>
        <item> Possible addresses </item>
        <item> Current </item>
        <item> Permanent </item>
        <item> Workplace Address </item>
        <item> Other </item>
    </string-array>
    <string name="deadbody_condition">DeadBody Condition</string>
    <string name="date_of_death">Date of death</string>
    <string name="deadbody_location">The location of the corpse</string>
    <string name="physical_details">Physical Details</string>
    <string name="eye">Eye</string>
    <string name="nose">Nose</string>
    <string name="hair">Hair</string>
    <string name="forehead">Forehead</string>
    <string name="beard">Beard</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="physical_constitution">Physical constitution</string>
    <string name="shape_of_face">Shape of face</string>
    <string name="chin">Chin</string>
    <string name="skin_color">Skin color</string>
    <string name="mustache">Mustache</string>
    <string name="ears">Ears</string>
    <string name="neck">Neck</string>
    <string name="height">Height</string>
    <string name="feet">(Feet)</string>
    <string name="inches">(Inches)</string>
    <string name="description_of_teeth">Description of teeth</string>
    <string name="special_physical_description">Special physical description</string>
    <string name="identification_mark">Identification mark</string>
    <string name="others_identification_mark">Others Identification mark</string>
    <string name="dress_descrioption">Dress Descrioption</string>
    <string name="dhead">Head</string>
    <string name="dcolor">Color</string>
    <string name="deye">Eye</string>
    <string name="dthroat">In the throat</string>
    <string name="dbody">In the body</string>
    <string name="dwaist">In the waist</string>
    <string name="dlegs">Legs</string>
    <string name="person_identification_info">Person identification information</string>
    <string name="missingpersonlevel">Information of the missing person</string>
    <string name="othersitemlevel">Others Item</string>
    <string name="unknowndeadbody">Anonymous corpses</string>
    <string name="newpassword">New Password</string>
    <string name="watch_Information">Watch Information</string>
    <string name="watch_type">Watch Type</string>
    <string name="mobilePhone_information">Mobile/Phone Information</string>
    <string name="keys_information">Keys Information</string>
    <string name="umbrella_information">Umbrella Information</string>
    <string name="dna_profile">DNA Profile</string>
    <string name="cards_information">Cards Inforamtion</string>
    <string name="money_information">Money Inforamtion</string>
    <string name="shoes_information">Shoes Inforamtion</string>
    <string name="electronics_information">Electronics Inforamtion</string>
    <string name="sorothal">Sorothal Report</string>
    <string name="lostfoundreport">Theft/Lost/Rescue</string>
    <string name="searchwithphoto">Search for identifiers with photoes</string>
    <string name="thanks">Thanks</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>