<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Registration.IdFragment">

    <LinearLayout
        android:id="@+id/LLInputForOthers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/spacing_large"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Fill the information"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_10" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/ivuser"
                style="@style/EditTextIcon"
                android:src="@drawable/ic_user" />

            <View
                android:id="@+id/vuser"
                style="@style/EditTextView"
                android:layout_toRightOf="@id/ivuser" />
            <LinearLayout
                android:layout_toRightOf="@id/vuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDocType"
                    style="@style/EditTextEditText"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/doc_type"
                    android:layout_marginLeft="5dp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:visibility="gone"
                    android:id="@+id/spnDocumentType"
                    android:layout_width="match_parent"
                    android:entries="@array/doc_type"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/ivNumber"
                style="@style/EditTextIcon"
                android:src="@drawable/ic_user" />

            <View
                android:id="@+id/vNumber"
                style="@style/EditTextView"
                android:layout_toRightOf="@id/ivNumber" />

            <EditText
                android:id="@+id/etNumber"
                style="@style/EditTextEditText"
                android:layout_toRightOf="@id/vNumber"
                android:hint="@string/doc_number" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/ivDOB"
                style="@style/EditTextIcon"
                android:src="@drawable/ic_user" />

            <View
                android:id="@+id/vDOB"
                style="@style/EditTextView"
                android:layout_toRightOf="@id/ivDOB" />

            <EditText
                android:id="@+id/etDOB"
                style="@style/EditTextEditText"
                android:layout_toRightOf="@id/vDOB"
                android:hint="@string/date_of_birth" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/ivPhnNumber"
                style="@style/EditTextIcon"
                android:src="@drawable/ic_user" />

            <View
                android:id="@+id/vPhnNumber"
                style="@style/EditTextView"
                android:layout_toRightOf="@id/ivPhnNumber" />

            <EditText
                android:id="@+id/etPhnNumber"
                style="@style/EditTextEditText"
                android:layout_toRightOf="@id/vPhnNumber"
                android:hint="@string/mobile_no" />

        </RelativeLayout>


    </LinearLayout>
    <RelativeLayout
        android:background="@color/colorPrimaryDark"
        android:id="@+id/rrfpd"
        android:padding="10dip"
        android:layout_height="@dimen/actionBarSize"
        android:layout_width="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView

            android:id="@+id/textNext"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="20sp"
            android:drawablePadding="7dp"
            android:drawableRight="@drawable/ic_forward_arrow"
            android:textColor="@android:color/white"
            android:drawableTint="@android:color/white"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>